[gd_scene load_steps=7 format=3 uid="uid://fhf4b4gcm3ay"]

[ext_resource type="Script" path="res://scenes/menus/level_overview_box.gd" id="1_pkm1s"]
[ext_resource type="Texture2D" uid="uid://cfl86wrtrta8p" path="res://assets/SproutLands Art Pack/Sprite sheet for Basic Pack.png" id="2_gqc8a"]
[ext_resource type="FontFile" uid="uid://0hcmt3kv7m6g" path="res://assets/fonts/BadComic-Regular.ttf" id="3_w4m7o"]
[ext_resource type="Texture2D" uid="uid://kwinsc3w6nes" path="res://assets/SproutLands Art Pack/UI Big Play Button.png" id="4_qg1fa"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l3v2k"]
texture = ExtResource("4_qg1fa")
region_rect = Rect2(99, 34, 90, 27)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ll4gp"]
texture = ExtResource("4_qg1fa")
region_rect = Rect2(3, 34, 90, 26)

[node name="Level Overview Box" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -980.0
offset_bottom = -520.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pkm1s")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_gqc8a")
region_rect = Rect2(293, 5, 38, 38)
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7

[node name="CompletedTint" type="ColorRect" parent="MarginContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 0.196078)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/NinePatchRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="LevelName" type="Label" parent="MarginContainer/NinePatchRect/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_w4m7o")
theme_override_font_sizes/font_size = 28
text = "Level Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="CoinsLabel" type="Label" parent="MarginContainer/NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_w4m7o")
theme_override_font_sizes/font_size = 20
text = "Coins Collected:"

[node name="CoinCounter" type="Label" parent="MarginContainer/NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_w4m7o")
theme_override_font_sizes/font_size = 24
text = "999/999"

[node name="PlayButton" type="Button" parent="MarginContainer/NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxTexture_l3v2k")
theme_override_styles/pressed = SubResource("StyleBoxTexture_l3v2k")
theme_override_styles/normal = SubResource("StyleBoxTexture_ll4gp")
